--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ body {
 
 a {
   text-decoration: none;
+  font-weight: bold;
   -moz-transition: color 0.2s;
   -ms-transition: color 0.2s;
   -webkit-transition: color 0.2s;
