--- a/index.css
+++ b/index.css
@@ -26,6 +26,13 @@ body {
   width: 30px;
   height: 30px; }
 
+.controls {
+  box-sizing: border-box;
+  padding: 0.3em 0.2em;
+  color: #777; }
+  .controls .fa:hover {
+    color: #333; }
+
 .demo {
   width: 300px;
   height: 200px;
