--- a/index.sass
+++ b/index.sass
@@ -28,6 +28,13 @@ body
   width: 30px
   height: 30px
 
+.controls
+  box-sizing: border-box
+  padding: 0.3em 0.2em
+  color: #777
+  .fa:hover
+    color: #333
+
 .demo 
   width: 300px
   height: 200px
