--- a/index.sass
+++ b/index.sass
@@ -1,5 +1,8 @@
 @import mixins
 
+html
+  position: relative
+
 body 
   font-family: 'Helvetica Neue', Helvetica, sans-serif
   font-weight: 300
@@ -32,10 +35,11 @@ body
   box-sizing: border-box
   padding: 0.3em 0.2em
   color: #777
-  .fa:hover
+  & > div:hover
     color: #333
 
 .demo 
+  position: relative
   width: 300px
   height: 200px
   border: 1px solid #eee
@@ -49,6 +53,28 @@ body
 
   button, .button, input[type=submit]
     margin-right: 0.5em
+
+  .exit-fullscreen
+    display: none
+
+.demo.fullscreen
+  z-index: 10
+  box-sizing: border-box
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100vh
+  padding: 30vh 35vw
+
+  text-align: center
+  h1
+    font-size: 30px
+  .button
+    margin-top: 1em
+
+  .exit-fullscreen
+    display: block
 
 a 
   text-decoration: none
