--- a/index.sass
+++ b/index.sass
@@ -35,8 +35,10 @@ body
   box-sizing: border-box
   padding: 0.3em 0.2em
   color: #777
-  & > div:hover
-    color: #333
+  .control
+    margin-right: 0.5em
+    &:hover
+      color: #333
 
 .demo 
   position: relative
