--- a/index.sass
+++ b/index.sass
@@ -40,6 +40,13 @@ body
     &:hover
       color: #333
 
+.tooltip input
+  width: 60px
+  background-color: rgba(0,0,0,0)
+  color: #fff
+  border: none
+  text-align: center
+
 .demo 
   position: relative
   width: 300px
